slides layout removed* and gap issue fixed in front end

--- a/public/src/block/advance-slider/style.scss
+++ b/public/src/block/advance-slider/style.scss
@@ -8,9 +8,7 @@
     display:none;
 }
 
-.vayu-blocks-advance-slider .slick-slide{
-    margin:5px;
-}
+
 
 /* Animation for heading */
 // @keyframes fadeInUp {
